--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^8.0.0",
     "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "mongoose": "^5.3.13"
+    "eslint-plugin-standard": "^4.0.0"
   },
   "dependencies": {
     "cli-table2": "^0.2.0",
     "colors": "^1.3.3",
     "inquirer": "^6.2.1",
-    "mongodb": "^3.1.9"
+    "mongodb": "^3.1.9",
+    "mongoose": "^5.4.14"
   }
 }
