--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "colors": "^1.3.3",
     "inquirer": "^6.2.1",
     "mongodb": "^3.1.9",
-    "mongoose": "^5.4.14"
+    "mongoose": "^5.4.14",
+    "yargs": "^13.2.1"
   }
 }
