--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "inquirer": "^6.2.1",
     "mongodb": "^3.1.9",
     "mongoose": "^5.4.14",
+    "validator": "^10.11.0",
     "yargs": "^13.2.1"
   }
 }
